--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ background: #555
             					<td>KARTU66 <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/ref-klik66" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/ref-kartu66" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
 							<tr>
             					<td>PRIAQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
@@ -225,38 +225,38 @@ background: #555
             					<td>LIGAPOKER <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/masuk-ligapoker2" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/ref-ligapoker" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
 
             				<tr>
             					<td>LIGA99 <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/masuk-liga99" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/ref-liga99" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
             				<tr>
             					<td>KLIKQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/masuk-klikqq2" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/ref-klikqq" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
             				<tr>
             					<td>LIGACAPSA <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/masuk-ligacapsa" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/ref-ligacapsa" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
             				<tr>
             					<td>KLIK66 <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/masuk-klik66" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/ref-klik66" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
             				<tr>
             					<td>CANTIKQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/masuk-cantikqq2" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/ref-cantikqq" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
 <!-- Support -->            				
             			</tbody>
