--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>PKV Games - PKVGames Login Daftar Bandarqq, Dominoqq, Poker</title>
 <meta name="description" content="pkv games merupakan situs server pkvgames dengan daftar login permainan pkv bandarqq, dominoqq, poker dan qq online terpercaya dilengkapi apk ios/android.">
-<link rel="shortcut icon" href="https://i.ibb.co/GJDjh9R/icon-pkvgames.png">
+<link rel="shortcut icon" href="https://i.ibb.co/b1MtYbR/icon-pkv-games.png">
 <link rel="canonical" href="https://tm.fon.bg.ac.rs/" />
 <link rel="alternate" hreflang="id" href="https://tm.fon.bg.ac.rs/" />
 <meta name="robots" content="index, follow" />
@@ -105,7 +105,7 @@ background: #f0ff05
 background: #555	
 }
 	
-.provider{width:100%;display:flex;flex-wrap:wrap;align-content:center;justify-content:space-around;align-items:center;background-color:black;}.provider .name .logo{padding:8px 2px}.provider .name .logo img{border:1px solid #000;border-radius:6px;background-color:rgb(188 164 91)}.provider .headline{color:#fff;width:100%;padding:8px;font-weight:700;text-transform:uppercase;background-color:rgb(75 77 79)}.provider .name .logo img:hover{filter:grayscale(1)}.provider .name{padding:8px 0;max-width:888px}.provider img{width:100%;max-width:118px}.provider .name .logo{max-width:33.33%}
+.provider{width:100%;display:flex;flex-wrap:wrap;align-content:center;justify-content:space-around;align-items:center;background-color:black;}.provider .name .logo{padding:8px 2px}.provider .name .logo img{border:1px solid #000;border-radius:6px;background-color:#f0ff05}.provider .headline{color:#fff;width:100%;padding:8px;font-weight:700;text-transform:uppercase;background-color:rgb(75 77 79)}.provider .name .logo img:hover{filter:grayscale(1)}.provider .name{padding:8px 0;max-width:888px}.provider img{width:100%;max-width:118px}.provider .name .logo{max-width:33.33%}
 	
 .btn-daftar{background:0 0;border:2px #f0ff05 solid;color:#fff;font-weight:700;font-size:1.1rem;font-family:Roboto,sans-serif;padding:6px 5px;border-radius:10px;margin:.4rem .8rem;width:90%;display:inline-block;text-transform:uppercase}.btn-daftar:hover{background:#f0ff0542;border:2px #ffffff solid;box-shadow:0 0 15px #f0ff05}.zoom{-webkit-animation:1s infinite;-webkit-animation-name:pulse;animation-name:pulse;-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;animation-fill-mode:both}.pulse{-webkit-animation-name:pulse;animation-name:pulse;-webkit-animation-duration:1s;animation-duration:1s;-webkit-animation-fill-mode:both;animation-fill-mode:both}@-webkit-keyframes pulse{0%{-webkit-transform:scale3d(1,1,1);transform:scale3d(1,1,1)}50%{-webkit-transform:scale3d(1.1,1.1,1.1);transform:scale3d(1.1,1.1,1.1)}100%{-webkit-transform:scale3d(1,1,1);transform:scale3d(1,1,1)}}@keyframes pulse{0%{-webkit-transform:scale3d(1,1,1);transform:scale3d(1,1,1)}50%{-webkit-transform:scale3d(1.1,1.1,1.1);transform:scale3d(1.1,1.1,1.1)}100%{-webkit-transform:scale3d(1,1,1);transform:scale3d(1,1,1)}}
 </style>
@@ -116,7 +116,7 @@ background: #555
 <div class="container">	
 	
 	<div class="logo_sub" align="center" itemscope="itemscope" itemtype="http://schema.org/Brand">
-	<a itemprop="url" title="pkvgames"><amp-img itemprop="logo" src="https://i.ibb.co/wRg40MQ/pkv-games.png" alt="pkv games" layout="fixed" width="250" height="75"><meta itemprop="name" content="pkvgames"></amp-img></a>     
+	<a itemprop="url" title="pkvgames"><amp-img itemprop="logo" src="https://i.ibb.co/LgnVFtJ/pkv-games.png" alt="pkv games" layout="fixed" width="250" height="75"><meta itemprop="name" content="pkvgames"></amp-img></a>     
 	</div>
 	
 	<h1 itemprop="headline"  align="center">PKV Games - PKVGames Login Daftar Bandarqq, Dominoqq, Poker</h1>
