--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>PKV Games - PKVGames Login Daftar Bandarqq, Dominoqq, Poker</title>
 <meta name="description" content="pkv games merupakan situs server pkvgames dengan daftar login permainan pkv bandarqq, dominoqq, poker dan qq online terpercaya dilengkapi apk ios/android.">
-<link rel="shortcut icon" href="https://i.ibb.co/b1MtYbR/icon-pkv-games.png">
+<link rel="shortcut icon" href="https://i.ibb.co/ZVcZg2j/icon-pkv-games.png">
 <link rel="canonical" href="https://tm.fon.bg.ac.rs/" />
 <link rel="alternate" hreflang="id" href="https://tm.fon.bg.ac.rs/" />
 <meta name="robots" content="index, follow" />
@@ -116,7 +116,7 @@ background: #555
 <div class="container">	
 	
 	<div class="logo_sub" align="center" itemscope="itemscope" itemtype="http://schema.org/Brand">
-	<a itemprop="url" title="pkvgames"><amp-img itemprop="logo" src="https://i.ibb.co/LgnVFtJ/pkv-games.png" alt="pkv games" layout="fixed" width="250" height="75"><meta itemprop="name" content="pkvgames"></amp-img></a>     
+	<a itemprop="url" title="pkvgames"><amp-img itemprop="logo" src="https://i.ibb.co/NSFTq0W/pkv-games.png" alt="pkv games" layout="fixed" width="250" height="75"><meta itemprop="name" content="pkvgames"></amp-img></a>     
 	</div>
 	
 	<h1 itemprop="headline"  align="center">PKV Games - PKVGames Login Daftar Bandarqq, Dominoqq, Poker</h1>
