--- a/index.html
+++ b/index.html
@@ -200,64 +200,95 @@ background: #555
             					<td>KARTU66 <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/ref-kartu66" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/kartu66_" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
 							<tr>
             					<td>PRIAQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/ref-priaqq" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/priaqq__" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
             				<tr>
             					<td>CAFEQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/ref-cafeqq" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/cafeqq__" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
             				<tr>
             					<td>AYAHQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/ref-ayahqq" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/ayahqq__" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
 <!-- Support -->
 	            				<tr>
             					<td>LIGAPOKER <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/ref-ligapoker" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/ligapoker_" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
 
             				<tr>
             					<td>LIGA99 <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/ref-liga99" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/liga99_" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
             				<tr>
             					<td>KLIKQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/ref-klikqq" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/klikqq__" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
             				<tr>
             					<td>LIGACAPSA <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/ref-ligacapsa" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/ligacapsa__" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
             				<tr>
             					<td>KLIK66 <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/ref-klik66" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/klik66__" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
             				<tr>
             					<td>CANTIKQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
             					<td class="d-none d-sm-table-cell">&#9989;</td>
-            					<td><a href="https://bit.ly/ref-cantikqq" target="_blank" class="button">DAFTAR</a></td>
+            					<td><a href="https://bit.ly/cantikqq_" target="_blank" class="button">DAFTAR</a></td>
             				</tr>
+							<tr>
+            					<td>VIRALQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
+            					<td class="d-none d-sm-table-cell">&#9989;</td>
+            					<td class="d-none d-sm-table-cell">&#9989;</td>
+            					<td><a href="https://bit.ly/viralqq__" target="_blank" class="button">DAFTAR</a></td>
+            				</tr>
+							<tr>
+            					<td>LONTEQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
+            					<td class="d-none d-sm-table-cell">&#9989;</td>
+            					<td class="d-none d-sm-table-cell">&#9989;</td>
+            					<td><a href="https://bit.ly/lonteqq__" target="_blank" class="button">DAFTAR</a></td>
+            				</tr>
+							<tr>
+            					<td>REDMIQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
+            					<td class="d-none d-sm-table-cell">&#9989;</td>
+            					<td class="d-none d-sm-table-cell">&#9989;</td>
+            					<td><a href="https://bit.ly/redmiqq__" target="_blank" class="button">DAFTAR</a></td>
+            				</tr>
+							<tr>
+            					<td>BANDARPKV <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
+            					<td class="d-none d-sm-table-cell">&#9989;</td>
+            					<td class="d-none d-sm-table-cell">&#9989;</td>
+            					<td><a href="https://bit.ly/bandarpkv__" target="_blank" class="button">DAFTAR</a></td>
+            				</tr>
+							<tr>
+            					<td>BAGIQQ <amp-img width="22" height="11px" src="https://i.ibb.co/5FKfRQY/hot-deal.gif" alt="login pkv games"></amp-img></noindex></td>
+            					<td class="d-none d-sm-table-cell">&#9989;</td>
+            					<td class="d-none d-sm-table-cell">&#9989;</td>
+            					<td><a href="https://bit.ly/bagiqq__" target="_blank" class="button">DAFTAR</a></td>
+            				</tr>
+
 <!-- Support -->            				
             			</tbody>
             		</table>
